Fix mobile layout issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2437,7 +2437,7 @@
 
 		.image.left {
 			float: left;
-			margin: 0 1.5em 1em 0;
+			margin: 0 3em 1em 0;
 			/*top: 0.25em;*/
 		}
 
